--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hapi/nes": "^12.0.2",
+    "axios": "^0.19.2",
+    "buefy": "^0.8.13",
+    "bulma": "^0.8.0",
     "core-js": "^3.6.4",
+    "peerjs": "^1.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-svg-inline-loader": "^1.5.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
