--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "peerjs": "^1.2.0",
+    "simplebar-vue": "^1.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-svg-inline-loader": "^1.5.0",
