--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 WEB_URL=http://localhost:8080
 API_URL=http://localhost:3000/api
 WS_URL=ws://localhost:3000
+
+PEERJS_HOST=
+PEERJS_PORT=
+PEERJS_PATH=
+PEERJS_SECURE=
