--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-svg-inline-loader": "^1.5.0",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
